<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center_horizontal">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Skin"
        android:textAlignment="center"
        android:textSize="22dp"
        android:textColor="@color/danger"/>
    <ImageView
        android:id="@+id/skin"
        android:layout_width="@dimen/size2"
        android:layout_height="@dimen/size2"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/app_name" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/dados_id"
            android:textColor="@color/danger"
            android:textAlignment="textEnd"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:id="@+id/dados_id"
            android:textSize="16sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/dados_iduser"
            android:textColor="@color/danger"
            android:textAlignment="textEnd"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:id="@+id/dados_iduser"
            android:textSize="16sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/dados_pcount"
            android:textColor="@color/danger"
            android:textAlignment="textEnd"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:textSize="16sp"
            android:id="@+id/dados_pcount"/>
    </LinearLayout>

    <Button
        android:id="@+id/down"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:onClick="download"
        android:text="@string/down" />

</LinearLayout>